# Sigil_AI_Content_Validator

./: .env.example  .gitignore  Makefile  README.md  add_video_transcribe.md  bot_detection_cursor_prompt.md  campaigns.yaml  config.py  image_analysis_cursor_prompt.md  output_policy_guard.md  package-lock.json  policyguard.py  pyproject.toml  pytest.ini  requirement_prompt.md  requirements-test.txt  requirements.txt  server.py  violating_conditions.md  warn_verdict_cursor_prompt.md
adapters/: __init__.py  base.py  facebook.py  instagram.py  reddit.py  tiktok.py  x.py
api/: __init__.py  dependencies.py  main.py
core/: __init__.py  bot_detector.py  detector.py  image_fetcher.py  json_input.py  judge.py  models.py  policy_loader.py  profile_scraper.py  video_transcriber.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
policies/: facebook_community.md  facebook_tos.md  instagram_community.md  instagram_tos.md  linkedin_community.md  linkedin_tos.md  reddit_content_policy.md  reddit_user_agreement.md  tiktok_community.md  tiktok_tos.md  x_rules.md  x_tos.md
scraper/: __init__.py  bulk_scrape.py  bulk_scrape_local.py  config.py  logging_setup.py  models.py  relevance.py  validate_to_excel.py
scraper_results/: facebook_albania_political_20260611_102616.json  facebook_albania_political_20260611_103935.json  facebook_albania_political_20260611_111929.json  facebook_albania_political_20260613_082422.json  facebook_albania_political_20260613_082729.json  facebook_albania_political_20260613_085441.json  (+12 more)
scrapers/: __init__.py  (+1 more)
(+122 files in other folders)
