[project]
name = "sigil-social-scraper"
version = "0.1.0"
description = "Multi-platform social media scraper (Apify -> Supabase) for the Sigil content monitoring pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apify-client==1.12.1",
    "asyncpg==0.30.0",
    "sqlalchemy[asyncio]==2.0.36",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "pyyaml==6.0.2",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.scripts]
sigil-scheduler = "scraper.orchestration.scheduler:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "mypy==1.14.1",
    "types-pyyaml==6.0.12.20241230",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
